# Audit-verse

./: .gitignore  .replit  README.md  package-lock.json  pyproject.toml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  audit-light-theming.md
.local/: .commit_message
.local/tasks/: audit-committee-module.md  audit-frameworks-library.md  audit-landing-redesign.md  audit-subpages-dark-redesign.md  auditverse-pitch-deck.md  charter-enhancements.md  comprehensive-audit-framework-library.md  fix-sidebar-brand-name.md  fix-white-on-white-text.md  full-module-seeding.md  rebrand-auditverse.md  task-1.md  task-10.md  (+14 more)
backend/: .gitignore  add_cde_environment_column.py  add_generated_phases_column.py  add_outbound_exception_model.py  add_parsed_control_column.py  add_vo_model.py  ai_uat_results.json  check_action_tables.py  check_actual_data.py  check_db.py  check_uploaded_frameworks.py  check_users.py  main.py  migrate_grc_users.py  migrate_integration_credentials_columns.py  requirements.txt  seed_charters_now.py  sql_lite.py  test_ai_complete.py  test_ai_recommendation.py  test_ai_recommendation_direct.py  test_complychat.py  test_endpoint.py  test_endpoint_validations.py  test_framework.py  test_generate_phases.py  test_patch_endpoint.py  test_phases_complete.py  test_server.py  test_sql_queries_directly.py  uat_results.json  verify_phases.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: build_brochure.py  build_pitch_deck.py  capture_screenshots.py  post-merge.sh
(+208 files in other folders)
